--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
     <script src="libs/p5.min.js"></script>
     <script src="javascript/main.js"></script>
 </head>
 
-<body style="background-color: black; color: white;">
-    ola meu amigo
-</body>
+<body style="background-color: black; color: white;"><center>
+    
+    ola meu amigo<br><br>
+    <img src="https://www.pineswcd.com/vertical/Sites/%7BB4CF315C-B365-47D6-A226-5F80C04C0D48%7D/uploads/tree_clipart.gif">
+
+</center></body>
 
 </html>
